dev/myappdeployment.yaml
# kubernetes deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-container
        image: harsha2103/blog:0.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
