dev/loadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-service
spec:
  selector:
    app: my-app
    name: my-ingress
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
