dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    app: my-app
  ports:
  - port: 80
    targetPort: 4500
