dev/ingressService.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    ingress.kubernetes.io/add-base-url: "true"
spec:
  rules:
  - host: localhost/ui
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myapp-service
            port: 
              number: 8080
